# p4c-zodiacfx

./: .gitignore  CMakeLists.txt  README.md  p4c-zodiacfx.cpp  version.h.cmake  zodiacfx-Backend.cpp  zodiacfx-Backend.h  zodiacfx-CodeGen.cpp  zodiacfx-CodeGen.h  zodiacfx-Control.cpp  zodiacfx-Control.h  zodiacfx-Lower.cpp  zodiacfx-Lower.h  zodiacfx-Midend.cpp  zodiacfx-Midend.h  zodiacfx-Model.cpp  zodiacfx-Model.h  zodiacfx-Object.h  zodiacfx-Options.h  zodiacfx-Parser.cpp  zodiacfx-Parser.h  zodiacfx-Program.cpp  zodiacfx-Program.h  zodiacfx-Table.cpp  zodiacfx-Table.h  zodiacfx-Target.cpp  zodiacfx-Target.h  zodiacfx-Type.cpp  zodiacfx-Type.h
p4include/: zodiacfx_model.p4
tests/: test_parser.p4
